--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h1> Hi this is Zara's Page !</h1>
 
       <p> This is my website! </p> 
+<a href = "digitaldesign.html"> Digital Design </a>
 
   </body>
 </html>
