--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
       <p> This is my website! </p> 
 <a href = "digitaldesign.html"> Digital Design </a>
-
+<a href = "wcp.html"> WCP </a>
+<a href = "visualdesign.html"> Visual Design </a>
+<a href = "aboutme.html"> About Me </a>
   </body>
 </html>
 
