--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
       <h1> Hi this is Zara's Page !</h1>
 
       <p> This is my website! </p> 
+<a href = "index.html"> Home Page </a>    
+    <br>
 <a href = "digitaldesign.html"> Digital Design </a>
+    <br>
 <a href = "wcp.html"> WCP </a>
+    <br>
 <a href = "visualdesign.html"> Visual Design </a>
+    <br>
 <a href = "aboutme.html"> About Me </a>
   </body>
 </html>
