--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -12,6 +12,7 @@
       
       <p> This is my website! </p> 
     <a href = “digitaldesign.html”> Digital Design </a>
+    <a href = "html_lab1.html" > Lab #1 Basic HTML Tags </a>
 
   </body>
 </html>
