--- a/html_lab1.html
+++ b/html_lab1.html
@@ -1,1 +1,22 @@
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  Hello world
+  <script src="script.js"></script>
+<h1>Before Beca </h1 
+ <p>I used to go to Grant Avenue Elementary school so I been in this building for a while. When I was younger I went live in the Dominican Republic for 6 months and came back to the bronx. I also joined a dance class and took ballet and hip-hop classes.</p> 
+  <h1>During Beca</h1> 
+  <p>As a student I have changed and learned more. I have been here since middle school so I already got used to it. My favorite class was always ELA because it was the easiest subject in my opinion and I always got high grades in that class.</p>
+  <h1>After Beca,</h1 
+  <p></p>I would love to go to NYU I have been wanting to go to that college since I was young. In my own time I like to make music and I also create my own beats. When I get older I will like to become an artist.
+</body>
+
+</html>
 
