--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     
       <h1> Hi this is Zara's Page !</h1>
-	  <h1>If you can read this the DW github push worked</h1>
+	  <h1>If you can read this the 3rd Github push worked&nbsp;</h1>
 
       <p> This is my website! </p> 
 <a href = "index.html"> Home Page </a>    
