--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -13,6 +13,7 @@
       <p> This is my website! </p> 
     <a href = “digitaldesign.html”> Digital Design </a>
     <a href = "html_lab1.html" > Lab #1 Basic HTML Tags </a>
+<a href = "html_lab5.html" > Lab #5 Sounds and Videos </a>
 
   </body>
 </html>
