--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -12,7 +12,15 @@
       
       <p> This is my website! </p> 
     <a href = “digitaldesign.html”> Digital Design </a>
+    <br>
     <a href = "html_lab1.html" > Lab #1 Basic HTML Tags </a>
+    <br>
+    <a href = "html_lab2.html" > Lab #2 HTML Images</a>
+    <br>
+        <a href = "html_lab3.html" > Lab #3 Hyperlinks</a>
+    <br>
+        <a href = "html_lab4.html" > Lab #4 Divs,IDs and Anchor</a>
+    <br>
 <a href = "html_lab5.html" > Lab #5 Sounds and Videos </a>
 
   </body>
