--- a/visualdesign.html
+++ b/visualdesign.html
@@ -31,7 +31,16 @@
       I also used these tools by choosing a color to fill my image behind. 
       I chose this selfie because I wanted to try it on a picture that has me in it. 
       The emotions that this selfie is showing is excitement because the colors I have chosen I think represent excitment.</p>
-   
+  
+ 
+  <h2> Kaleidoscopes</h2>
+<img src="2.2art.png" width="350" height="350" alt="Kaleidoscopes"/> 
+	  <p>This project was made in an adobe shop. The steps that I used to achieve my kaleidoscope was opening my filtered image and duplicating the layers to edit the picture. My original image was different after applying all of these steps because it had multiple layers which also changed the original color. The results were that the colors had changed and the layers which also brings out the picture more. </p>
+  
+      <h2>Canva Assignment</h2>
+	  <img src="Myvibeproject.jpeg" width="421" height="333" alt=""/>	  
+	  <p> I used the program adobe express to create my project. I started by deciding what color represents my vibe and it was pink so while I was making my  collage about my favorite things I wanted the pink to show in the background. I used pictures that were my favorite things which are music, my favorite albums, and my own aesthetics. I also included gold lines in the background because that is also my favorite color. My collage reflects my aesthetic because I added everything I like and what most represents me.</p>
+	  <br>
    
     
       
