--- a/html_lab5.html
+++ b/html_lab5.html
@@ -11,16 +11,16 @@
 <h1> Questions about Vido Files </h1>
 
 
- <video controls  height = 200 width = 200>
+ <video controls  height = "200" width = "200">
   <source src = "20200614_192747.mp4" type = "video/mp4">
 </video>
 <br>
    
-  <video controls  height = 100 width = 100>
+  <video controls  height = "100" width = "100">
   <source src = "20200614_192747.mp4" type = "video/mp4">
 </video>
 <br>
-<video controls  height = 200 width = 300>
+<video controls  height = "200" width = "300">
   <source src = "Waterfall - 37088.mp4" type = "video/mp4">
 </video>
 
