updated many pages og

--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -11,7 +11,7 @@
       <h1> Hi this is Zara's Page !</h1>
       
       <p> This is my website! </p> 
-    <a href = “digitaldesign.html”> Digital Design </a>
+    <a href = "digitaldesign.html"> Digital Design </a>
     <br>
     <a href = "html_lab1.html" > Lab #1 Basic HTML Tags </a>
     <br>
