--- a/html_lab5.html
+++ b/html_lab5.html
@@ -27,11 +27,11 @@
 
 <h1> Questions about Sound Files </h1>
 <audio controls>
-  <source src = "Symphony No.6 (1st movement).ogg" type = "audio/mpeg">
+  <source src = "Symphony No.6 (1st movement).ogg" type = "audio/ogg">
 </audio>
 <br>
  <audio controls>
-    <source src = "hip-hop-is-112772.mp3" type = "audio/mpeg">
+    <source src = "hip-hop-is-112772 (1).mp3" type = "audio/mpeg">
 </audio>
 
 
