--- a/html_lab2.html
+++ b/html_lab2.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>Picture #1 (You should replace this) </h1>
-    <img src = "Nicki Minaj.jpeg" alt = "Nicki Minaj"
+    <img src = "Nicki Minajjjj.jpeg" alt = "Nicki Minaj"
     <br>
     <p> The original image has a resolution of 1548 x 1024 </p>
     <p> The aspect ratio is 1548 × 1024 /  </p>
