--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <title>Digital Design Class</title>
     
   </head>
+<style>
+    p{
+  font-family: sans-serif;
+  font-size: 14px;
+  color: red;
+}
+  body{background-color: yellow;}
+  h1{color: purple;
+    }
+  h3{color: Violet-Blue;
+    }
+h2{color: Teal;
+    }
+p{color: Orange}
+
+
+}
+  </style>
 
   <body>
     
