--- a/html_lab1.html
+++ b/html_lab1.html
@@ -1,12 +1,28 @@
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Lab 1</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
+style>
+    p{
+  font-family: sans-serif;
+  font-size: 14px;
+  color: red;
+}
+  body{background-color: yellow;}
+  h1{color: purple;
+    }
+  h3{color: Violet-Blue;
+    }
+h2{color: Teal;
+    }
+p{color: Orange}
+}
+  </style>
 <body>
   Hello world
   <script src="script.js"></script>
@@ -16,7 +32,11 @@
   <p>As a student I have changed and learned more. I have been here since middle school so I already got used to it. My favorite class was always ELA because it was the easiest subject in my opinion and I always got high grades in that class.</p>
   <h1>After Beca,</h1 
   <p></p>I would love to go to NYU I have been wanting to go to that college since I was young. In my own time I like to make music and I also create my own beats. When I get older I will like to become an artist.
-</body>
+<br>
+   <h3>go Back to the home page </h3>
+    <a href = "index.html"> Home Page </a>
+	  <br>
+  </body>
 
 </html>
 
