--- a/html_lab3.html
+++ b/html_lab3.html
@@ -7,9 +7,25 @@
    Repeat this twice for Picture #2 and #3    --> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>lab 2</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+  style>
+    p{
+  font-family: sans-serif;
+  font-size: 14px;
+  color: red;
+}
+  body{background-color: yellow;}
+  h1{color: purple;
+    }
+  h3{color: Violet-Blue;
+    }
+h2{color: Teal;
+    }
+p{color: Orange}
+}
+  </style>
   <body>
     <h1>Picture #1 (You should replace this) </h1>
     <img src = "Zarilyn19_portfolio/Nicki Minaj.jpeg" alt = "Nicki Minaj"
