--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   font-size: 14px;
   color: red;
 }
-  body{background-color: yellow;}
+  body{background-color: light-yellow;}
   h1{color: purple;
     }
   h3{color: Violet-Blue;
