--- a/html_lab1.html
+++ b/html_lab1.html
@@ -7,7 +7,7 @@
   <title>Lab 1</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-style>
+<style>
     p{
   font-family: sans-serif;
   font-size: 14px;
