--- a/html_lab2.html
+++ b/html_lab2.html
@@ -10,7 +10,7 @@
     <title>lab 2</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  style>
+  <style>
     p{
   font-family: sans-serif;
   font-size: 14px;
