--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -5,7 +5,24 @@
     <title>Digital Design Class</title>
         
   </head>
-  
+  <style>
+    p{
+  font-family: sans-serif;
+  font-size: 14px;
+  color: red;
+}
+  body{background-color: #ff00ff;}
+  h1{color: purple;
+    }
+  h3{color: Violet-Blue;
+    }
+h2{color: Teal;
+    }
+p{color: Orange}
+
+
+}
+  </style>
   <body>
         
       <h1> Hi this is Zara's Page !</h1>
