--- a/html_lab2.html
+++ b/html_lab2.html
@@ -16,7 +16,7 @@
   font-size: 14px;
   color: red;
 }
-  body{background-color: yellow;}
+  body{background-color: #ff00ff;}
   h1{color: purple;
     }
   h3{color: Violet-Blue;
