--- a/html_lab2.html
+++ b/html_lab2.html
@@ -27,7 +27,7 @@ p{color: Orange}
 }
   </style>
   <body>
-    <h1>Picture #1 (You should replace this) </h1>
+    <h1>Picture #1  </h1>
     <img src = "Nicki Minajjjj.jpeg" alt = "Nicki Minaj"
     <br>
     <p> The original image has a resolution of 1548 x 1024 </p>
@@ -40,7 +40,7 @@ p{color: Orange}
     <img src = "Nicki Minaj.jpeg" alt = "Nick Minaj" width = "200" height = "122.5">
 
  
- <h2>  ----------------This divides the section (don't delete) ---- </h2>
+ <h2>  ----------------This divides the section --------------- </h2>
     <h1> Picture 2 </h1>
 
     <p> The original image has a resolution of 982 x 726 </p>
@@ -56,9 +56,8 @@ p{color: Orange}
 
 
 
- <h2>  ----------------This divides the section (don't delete) ---- </h2>
+ <h2>  ----------------This divides the section ------------- </h2>
     <h1>Picture #3 </h1>
- <h1>Picture #1 (You should replace this) </h1>
     <img src = "Pink.jpeg" alt = "aesthetic"
     <br>
     <p> The original image has a resolution of 736 x1102  </p
