--- a/html_lab4.html
+++ b/html_lab4.html
@@ -75,13 +75,13 @@
       </div>
 <br>
         <div id = "series">
-    <h2>Favorite Series</h2>
+    <h2>Favorite Series/Movies</h2>
     <img src = Conjuring.jpg alt = "favorite movie" width = "300" height = "200">
     <ol>
       <li>Stranger Things</li>
       <li>American Horror story</li>
-      <li>The Strain</li>
-      <li>Rythm Flow</li>
+      <li>No Escape</li>
+      <li>The Conjuring</li>
     </ol>
 <a href="#Top"> Back to Top </a>
   </ol>
