--- a/html_lab4.html
+++ b/html_lab4.html
@@ -76,7 +76,7 @@
 <br>
         <div id = "series">
     <h2>Favorite Series/Movies</h2>
-    <img src = Conjuring.jpg alt = "favorite movie" width = "300" height = "200">
+    <img src = Conjuring.jpeg alt = "favorite movie" width = "300" height = "200">
     <ol>
       <li>Stranger Things</li>
       <li>American Horror story</li>
