--- a/html_lab5.html
+++ b/html_lab5.html
@@ -6,6 +6,23 @@
     <title>2.4 Sound and Video</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+  <style>
+    p{
+  font-family: sans-serif;
+  font-size: 24px;
+  color: red;
+  background-color: black;
+}
+  body{background-color: pink;}
+  ol{color: red;
+    }
+  h1{color: purple;
+    }
+  h2{color: blue;
+    }
+  ul{color: hotpink;
+    }
+  </style>
   <body>
 
 <h1> Questions about Vido Files </h1>
