--- a/aboutme.html
+++ b/aboutme.html
@@ -4,10 +4,26 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>About Me</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
+<style>
+    p{
+  font-family: sans-serif;
+  font-size: 24px;
+  color: red;
+  background-color: black;
+}
+  body{background-color: pink;}
+  ol{color: red;
+    }
+  h1{color: purple;
+    }
+  h2{color: blue;
+    }
+  ul{color: hotpink;
+    }
+  </style>
 <body>
   Hello world
   <script src="script.js"></script>
@@ -18,3 +34,4 @@
   <h1>After Beca,</h1 
   <p></p>I would love to go to NYU I have been wanting to go to that college since I was young. In my own time I like to make music and I also create my own beats. When I get older I will like to become an artist.
 </body>
+  </html>
