--- a/html_lab5.html
+++ b/html_lab5.html
@@ -29,12 +29,12 @@
 
 
  <video controls  height = "200" width = "200">
-  <source src = "20200614_192747.mp4" type = "video/mp4">
+  <source src = "20200614_192747 (2) (1).mp4" type = "video/mp4">
 </video>
 <br>
    
   <video controls  height = "100" width = "100">
-  <source src = "20200614_192747.mp4" type = "video/mp4">
+  <source src = "20200614_192747 (2) (1).mp4" type = "video/mp4">
 </video>
 <br>
 <video controls  height = "200" width = "300">
