--- a/html_lab5.html
+++ b/html_lab5.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>2.4 Sound and Video</title>
+    <title>Lab 5</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <style>
@@ -37,9 +37,6 @@
   <source src = "20200614_192747 (2) (1).mp4" type = "video/mp4">
 </video>
 <br>
-<video controls  height = "200" width = "300">
-  <source src = "Waterfall - 37088.mp4" type = "video/mp4">
-</video>
 
 
 <h1> Questions about Sound Files </h1>
@@ -50,6 +47,10 @@
  <audio controls>
     <source src = "hip-hop-is-112772 (1).mp3" type = "audio/mpeg">
 </audio>
+<br>
+   <h3>go Back to the home page </h3>
+    <a href = "index.html"> Home Page </a>
+	  <br>
 
 
   </body>
